# Auguri-MusikalischesW-rfelspiel

./: .env.example  .gitignore  README.md  auguri_wurfelspiel.py  pyproject.toml  score.ly
