[tool.poetry]
name = "wurfelspiel"
version = "0.1.0"
description = ""
authors = ["Burlesco70 <mario.nardi.70@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.6.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
